--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Arshad Shaik</h1>
 <h2>ITMO-544 </h2>
-<img src="https://s3.amazonaws.com/itmo-544-ars-a04-bucket02/DSC00571.jpg"/>
+<img src="https://s3.amazonaws.com/myimage-123/DSC00656.JPG"/>
 <a href="page2.html">Second page</a>
 
 </body>
